[package]
name = "serde_array_query"
version = "0.1.0"
edition = "2021"
description = "Serde deserialization format for HTTP query string arrays"
license = "Apache-2.0"

[dependencies]
serde = "1.0.0"
serde_urlencoded = { version = "0.7.0", optional = true }

[dev-dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"]}

[features]
default = ["serde/derive", "from_str"]
from_str = ["serde_urlencoded"]
